# embedded-mogeefont

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENCE.md  README.md  flake.nix
generate-font/: Cargo.toml
generate-font/src/: elm_file_data.rs  glyph_images.rs  main.rs
rx/: fix-glfw.patch
specimen/: Cargo.toml
specimen/src/: main.rs
src/: ascii_font.raw  ascii_glyph_data.raw  charset.rs  draw_target.rs  font.rs  generated.rs  glyph_data.raw  kerning.rs  lib.rs  ligature_substitution.rs  ligatures.rs  mogeefont.raw  mogeefont.rs  side_bearings.rs  text_style.rs
